<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CreateNew"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    android:backgroundTint="@color/colorSearchBackground"
    android:orientation="vertical"
    android:padding="15dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="135dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/BestTheme"
        android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1.9"
            android:text="@string/create_new"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/main_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">


        <LinearLayout
            android:id="@+id/post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/none"
                android:src="@drawable/post"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1.9"
                android:text="@string/post"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="65dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/reel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/none"
                android:src="@drawable/reel"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1.9"
                android:text="@string/reel"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="65dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/stories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/none"
                android:src="@drawable/stories"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1.9"
                android:text="@string/stories"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="17sp" />


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="60dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/none"
                android:src="@drawable/highlight"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1.9"
                android:text="@string/highlight"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="60dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/none"
                android:src="@drawable/video_camera"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1.9"
                android:text="@string/video"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="60dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/none"
                android:src="@drawable/guide"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1.9"
                android:text="@string/guide"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="60dp"
            android:background="@color/white"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</LinearLayout>


